--- a/META.yml
+++ b/META.yml
@@ -1,18 +1,14 @@
---- 
-abstract: Unicode aware Catalyst
-author: Christian Hansen, C<ch@ngmedia.com>
-distribution_type: module
-generated_by: Module::Install version 0.67
-license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+---
 name: Catalyst-Plugin-Unicode
-no_index: 
-  directory: 
-    - inc
-    - t
-requires: 
-  Catalyst::Runtime: 5.70
-  Test::More: 0
-version: 0.5
+version: 0.2
+author:
+  - |-
+    Christian Hansen, C<ch@ngmedia.com>
+    Marcus Ramberg, C<mramberg@pcan.org>
+abstract: Unicode aware Catalyst
+license: perl
+provides:
+  Catalyst::Plugin::Unicode:
+    file: lib/Catalyst/Plugin/Unicode.pm
+    version: 0.2
+generated_by: Module::Build version 0.26
