--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,17 @@
 ---
 abstract: 'Unicode aware Catalyst'
 author:
-  - 'Jonathan Rockway <jrockway@cpan.org>'
+  - 'Tomas Doran <bobtfish@bobtfish.net>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   IO::Scalar: 0
   Test::More: 0
   Test::WWW::Mechanize::Catalyst: 0
   ok: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.77'
+generated_by: 'Module::Install version 0.910'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,4 +26,5 @@ requires:
   MRO::Compat: 0.10
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.91
+  repository: http://dev.catalyst.perl.org/repos/Catalyst/trunk/Catalyst-Plugin-Unicode/
+version: 0.92
